--- a/download-movie/index.html
+++ b/download-movie/index.html
@@ -77,7 +77,7 @@
             class="fas fa-heart"
             style="color: #e63946; vertical-align: middle"
           ></i>
-          by <strong>MiniDev Tech Community</strong>
+          by <strong>minidev-ah Tech Community</strong>
         </p>
       </div>
     </footer>
