--- a/all/index.html
+++ b/all/index.html
@@ -55,7 +55,7 @@
             class="fas fa-heart"
             style="color: #e63946; vertical-align: middle"
           ></i>
-          by <strong>MiniDev Tech Community</strong>
+          by <strong>minidev-ah Tech Community</strong>
         </p>
       </div>
     </footer>
